kubernetes/management/backups/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backups
  labels:
    pod-security.kubernetes.io/warn: privileged
