kubernetes/management/backups/base/garage-webui.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: backups
  name: garage-webui
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: garage-webui
spec:
  type: ClusterIP
  ports:
    - name: webui
      port: 3909
      protocol: TCP
  selector:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: garage-webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backups
  name: garage-webui
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: garage-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: backups
      kalexlab.xyz/component: garage-webui
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: backups
        kalexlab.xyz/component: garage-webui
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always

      containers:
        - name: app
          image: "docker.io/khairul169/garage-webui:1.1.0"
          imagePullPolicy: Always

          ports:
            - containerPort: 3909
              protocol: TCP

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          # resources:
          #   requests:
          #     memory: 1Mi
          #     cpu: 1m
          #   limits:
          #     memory: 20Mi
          #     cpu: 10m

          readinessProbe:
            httpGet:
              path: /
              port: 3909
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3909
            failureThreshold: 3
            periodSeconds: 30

          volumeMounts:
            - name: garage-conf
              mountPath: /etc/garage.toml
              subPath: garage.toml

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: garage-conf
          configMap:
            name: garage-conf
