kubernetes/management/backups/base/garagehq.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: backups
  name: garage
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: garage
spec:
  type: ClusterIP
  ports:
    - name: s3-api
      port: 3900
      protocol: TCP
    - name: rpc
      port: 3901
      protocol: TCP
    - name: web
      port: 3902
      protocol: TCP
    - name: admin
      port: 3903
      protocol: TCP
  selector:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: garage
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: backups
  name: garage
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: garage
spec:
  replicas: 1
  serviceName: garage
  selector:
    matchLabels:
      kalexlab.xyz/app: backups
      kalexlab.xyz/component: garage
  template:
    metadata:
      labels:
        kalexlab.xyz/app: backups
        kalexlab.xyz/component: garage
        kalexlab.xyz/monitoring: "true"
    spec:
      nodeSelector:
        kubernetes.io/hostname: hermes

      containers:
        - name: garage
          image: "docker.io/dxflrs/garage:v2.1.0"
          imagePullPolicy: Always

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 3900
              protocol: TCP
            - containerPort: 3901
              protocol: TCP
            - containerPort: 3902
              protocol: TCP
            - containerPort: 3903
              protocol: TCP

          resources:
            requests:
              memory: 10Mi
              cpu: 5m
            limits:
              memory: 500Mi
              cpu: 1000m

          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3903
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3903
          #   failureThreshold: 3
          #   periodSeconds: 30

          volumeMounts:
            - name: s3-data-pvc
              mountPath: /var/lib/garage
            - name: garage-conf
              mountPath: /etc/garage.toml
              subPath: garage.toml

      volumes:
        - name: garage-conf
          configMap:
            name: garage-conf
        - name: s3-data-pvc
          persistentVolumeClaim:
            claimName: s3-data-pvc

      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
