kubernetes/management/backups/base/rustfs.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: backups
  name: rustfs
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: rustfs
spec:
  type: ClusterIP
  ports:
    - name: rustfs
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: rustfs-ui
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: rustfs
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: backups
  name: rustfs
  labels:
    kalexlab.xyz/app: backups
    kalexlab.xyz/component: rustfs
spec:
  replicas: 1
  serviceName: rustfs
  selector:
    matchLabels:
      kalexlab.xyz/app: backups
      kalexlab.xyz/component: rustfs
  template:
    metadata:
      labels:
        kalexlab.xyz/app: backups
        kalexlab.xyz/component: rustfs
        kalexlab.xyz/monitoring: "true"
    spec:
      nodeSelector:
        # Use feature label from node-feature-discovery
        feature.node.kubernetes.io/usb-08_0480_0905.present: "true"
      restartPolicy: Always
      containers:
        - name: rustfs
          image: "docker.io/rustfs/rustfs:1.0.0-alpha.65"
          imagePullPolicy: Always

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9001
              protocol: TCP

          resources:
            requests:
              memory: 4Gi
              cpu: 100m
            limits:
              memory: 6Gi
              cpu: 1000m

          readinessProbe:
            httpGet:
              path: /health
              port: 9000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            periodSeconds: 60

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /data
              name: s3-data-pvc

          # lifecycle:
          #   postStart:
          #     exec:
          #       command: [
          #           "/bin/bash",
          #           "-c",
          #           '
          #           until (/usr/bin/mc alias set myminio http://localhost:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD"); do
          #           sleep 3;
          #           done;
          #
          #           if [[ $(/usr/bin/mc ls myminio) ]]; then
          #           exit 0;
          #           fi;
          #
          #           /usr/bin/mc mb myminio/velero;
          #           /usr/bin/mc mb myminio/longhorn;
          #           /usr/bin/mc mb myminio/restic;
          #           /usr/bin/mc mb myminio/cnpg;
          #           exit 0;',
          #         ]

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi

  volumeClaimTemplates:
    - metadata:
        name: s3-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ""
        resources:
          requests:
            storage: 1Ti
