kubernetes/management/backups/base/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: backups
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: backups
  name: rustfs
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: backups
      kalexlab.xyz/component: rustfs
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-cnpg-clusters-backups
spec:
  endpointSelector:
    matchLabels:
      kalexlab.xyz/component: cluster
  egress:
    # Allow traffic from all cnpg clusters to s3 storage
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
